--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 /public/system/*
 
 #ignore db config
-/config/database.yml
+#/config/database.yml
 
 # Ignore Ruby mine project config files
 /.idea
